[FIX] point_of_sale: fix cash move popup currency display not overlapping
Steps to reproduce:

- Add Switzerland Accounting, go to the CH Company and create a PoS.
- Go to the PoS and go to the Cash In/Out in the top bar.
- Start introducing a value in the input field.

Issue:

The field is only made to 1 character as a currency symbol, so when the
currency has more than 1 it will overlap with the values in the input.

Solution:

Added a new class to put currencies above one symbol to the left,
and we keep the rest as it was.

opw-3121266

X-original-commit: 4a1d28caecb816cc4b0c4b72d4693c29672faaf4

--- a/addons/point_of_sale/static/src/scss/pos.scss
+++ b/addons/point_of_sale/static/src/scss/pos.scss
@@ -3768,6 +3768,14 @@ td {
     top: 10px;
 }
 
+.cash-move .input-amount .input-field span.left-currency {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    background-color: #fff;
+    padding-right: 8px;
+}
+
 .cash-move textarea {
     resize: none;
     margin-top: 10px;
